# DBGPThesis

./: README.md  Thesis.tex  ThesisProof.tex
configs/: example_config.txt
src/: CMakeLists.txt  CSVDataSource.h  ClusterMapping.cpp  ClusterMapping.h  ConfigReader.cpp  ConfigReader.h  DataSource.h  DecompositionMethod.h  DecompositionTree.cpp  DecompositionTree.h  DoublyLinkedList.h  DoublyLinkedListIterator.h  Edge.h  Graph.cpp  Graph.h  MergeComponent.h  MetisStatic.h  MongoDBData.h  ParMetisConnectedComponentComputation.h  dynamicLoop.h  main.cpp  staticLoop.h  typedefs.h
tests/: CMakeLists.txt  CSVDataSourceTest.cpp  ClusterMappingTest.cpp  DecompostionTreeTest.cpp  DoublyLinkedListTest.cpp  GraphTest.cpp  ListLinearHeapTest.cpp  ParmetisIntegrationTest.cpp  TreeTest.cpp  UnionFindTest.cpp
title/: title_page.tex
